[project]
name = "kiracro-improved"
version = "0.1.0"
description = "Best da hood macro."
authors = [
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = "MIT"
dependencies = [
    "pynput (>=1.8.1,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "pyinstaller (>=6.15.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "kiracro_improved", from = "src"}]

[tool.poetry.scripts]
poetry-runner = "kiracro_improved.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
